# flashalpha-quantconnect

./: .gitignore  CHANGELOG.md  README.md  llms.txt
.github/workflows/: ci.yml  nightly.yml  release-csharp.yml  release-python.yml
docs/: auth.md  data-types.md  getting-started.md  troubleshooting.md
docs/recipes/: 0dte-pin-risk-check-in-quantconnect.md  combine-flashalpha-with-equity-data.md  filter-universe-by-gex-regime.md  subscribe-to-gex-in-quantconnect.md  vol-surface-snapshot-in-quantconnect.md
docs/superpowers/plans/: 2026-05-28-flashalpha-quantconnect.md
src/csharp/: Directory.Build.props  FlashAlpha.QuantConnect.sln
src/python/: README.md  pyproject.toml
src/python/src/flashalpha_quantconnect/: __init__.py  client.py  config.py  exceptions.py  extensions.py
src/python/src/flashalpha_quantconnect/data/: _lean_import.py  exposure.py  max_pain.py  narrative.py  option_quote.py  source.py  stock_quote.py  stock_summary.py  surface.py  tickers.py  volatility.py  vrp.py  zero_dte.py
src/python/tests/: conftest.py  test_adv_volatility_bar.py  test_chex_bar.py  test_config.py  test_dex_bar.py  test_exposure_levels_bar.py  test_exposure_summary_bar.py  test_gex_bar.py  test_http_client.py  test_max_pain_bar.py  test_narrative_bar.py  test_option_quote_bar.py  test_schema_drift_guard.py  test_stock_quote_bar.py  test_stock_summary_bar.py  test_surface_bar.py  test_tickers_bar.py  test_tickers_universe.py  test_vex_bar.py  test_volatility_bar.py  test_vrp_bar.py  test_zero_dte_bar.py
src/python/tests/end_to_end/: gex_regime_following_algorithm.py  test_end_to_end_backtest.py
(+48 files in other folders)
