[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flashalpha-quantconnect"
version = "0.1.0"
description = "FlashAlpha options-flow and dealer-positioning data as QuantConnect LEAN custom-data bars. GEX, DEX, VEX, vol surface, 0DTE, VRP, max-pain."
readme = "README.md"
license = "MIT"
authors = [{ name = "FlashAlpha" }]
requires-python = ">=3.10"
keywords = [
  "quantconnect", "lean", "options", "gex", "dex", "vex",
  "gamma-exposure", "dealer-positioning", "vol-surface",
  "0dte", "vrp", "max-pain", "flashalpha", "options-flow",
  "custom-data", "algorithmic-trading", "backtesting",
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
  "flashalpha-historical>=0.4.0rc1",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "pytest-asyncio",
]

[project.urls]
Homepage = "https://github.com/FlashAlpha-lab/flashalpha-quantconnect"
Repository = "https://github.com/FlashAlpha-lab/flashalpha-quantconnect"
Documentation = "https://github.com/FlashAlpha-lab/flashalpha-quantconnect#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/flashalpha_quantconnect"]

[tool.pytest.ini_options]
markers = [
  "integration: hits historical.flashalpha.com (requires FLASHALPHA_API_KEY)",
]
